[LFC][TFC] Percent height resolving quirk should stop at the table formatting context root https://bugs.webkit.org/show_bug.cgi?id=226156

Reviewed by Darin Adler.

Source/WebCore:

Test: fast/layoutformattingcontext/table-with-percent-height-descendant.html

* layout/formattingContexts/FormattingQuirks.h:
* layout/formattingContexts/table/TableFormattingQuirks.cpp:
(WebCore::Layout::TableFormattingQuirks::heightValueOfNearestContainingBlockWithFixedHeight const):
* layout/formattingContexts/table/TableFormattingQuirks.h:

LayoutTests:

* fast/layoutformattingcontext/table-with-percent-height-descendant-expected.html: Added.
* fast/layoutformattingcontext/table-with-percent-height-descendant.html: Added.


Canonical link: https://commits.webkit.org/238123@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278010 268f45cc-cd09-0410-ab3c-d52691b4dbfc